ui/envoy-deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-ui
  template:
    metadata:
      labels:
        app: envoy-ui
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.29.0
          ports:
            - containerPort: 10000
          volumeMounts:
            - name: config-volume
              mountPath: /etc/envoy
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: envoy-config-ui
