ui/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-ui
spec:
  selector:
    app: envoy-ui
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
