ui/envoy-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-ui
  template:
    metadata:
      labels:
        app: envoy-ui
    spec:
      containers:
        - name: envoy
          image: gcr.io/celi12/envoy-image:latest
          ports:
            - containerPort: 10000
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config-ui
