ui/envoy-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-ui
spec:
  selector:
    app: envoy-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 10000
  type: LoadBalancer
