ui/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: default
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
